[jenkins-user-permission] Add errors in Q-01